<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/itemdetails_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/defaultContentDesc" />

    <TextView
        android:id="@+id/itemdetails_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemdetails_pic"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:lines="1"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itemdetails_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemdetails_name"
        android:layout_marginTop="-5dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:lines="1"
        android:textSize="26sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/itemdetails_returned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/btn_orange"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/itemdetails_btn_returned"
        android:textAllCaps="true"
        android:textColor="@color/text_light"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/itemdetails_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/itemdetails_returned"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/itemdetails_btn_edit"
        android:textAllCaps="true"
        android:textColor="@color/text_light"
        android:textSize="22sp"
        android:textStyle="bold" />

</RelativeLayout>